--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "nodemon": "^3.0.1",
     "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "smartmeter-obis": "^3.0.2"
   }
 }
