--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     ],
     "declaration": true,
     "declarationMap": true,
-    "sourceMap": true,
+    "sourceMap": false,
     "outDir": "./dist",
     "rootDir": "./src",
     "strict": true,
