--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "homebridge-sml",
-  "displayName": "Homebridge Power-Meter Power Consumption and Power Return",
+  "displayName": "Homebridge SML smartmeter",
   "version": "1.0.0",
-  "description": "See current power consumption and power return in Homekit",
+  "description": "Plugin for SML smartmeter devices to read power consumption and power return values supporting SML and D0 ASCII protocols",
   "license": "Apache-2.0",
-  "author": "Robert Oschwald",
+  "author": "Robert Oschwald <robertoschwald@users.noreply.github.com>",
   "repository": {
     "type": "git",
     "url": "https://github.com/robertoschwald/homebridge-sml.git"
@@ -13,15 +13,19 @@
     "url": "https://github.com/robertoschwald/homebridge-sml/issues"
   },
   "engines": {
-    "node": "^20||^18",
-    "homebridge": "^1.8.2"
+    "node": ">=20.0.0",
+    "homebridge": ">=1.8.0"
   },
   "main": "dist/index.js",
   "scripts": {
-    "lint": "eslint src/**.ts --max-warnings=0",
+    "lint": "eslint src/**.ts",
     "watch": "npm run build && npm link && nodemon",
     "build": "rimraf ./dist && tsc",
-    "prepublishOnly": "npm run lint && npm run build"
+    "package": "npm run build && npm run lint && node -p \"'homebridge-sml-' + require('./package.json').version + '.zip'\" | xargs -I {} zip -r {} dist/ package.json README.md LICENSE config.schema.json",
+    "prepublishOnly": "npm run lint && npm run build",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "keywords": [
     "homebridge-plugin",
@@ -34,7 +38,8 @@
     "solar-panels",
     "s0",
     "d0",
-    "solar-yield"
+    "solar-yield",
+    "smartmeter"
   ],
   "devDependencies": {
     "@types/node": "^20.11.25",
@@ -45,12 +50,22 @@
     "nodemon": "^2.0.22",
     "rimraf": "^5.0.5",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
+    "@types/jest": "^29.5.14"
   },
   "dependencies": {
     "axios": "^1.6.7",
     "serialport": "^12.0.0",
     "ws": "^8.17.1",
     "smartmeter-obis": "^4.0.0"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "roots": ["<rootDir>/src"],
+    "testMatch": ["**/__tests__/**/*.test.ts"],
+    "moduleFileExtensions": ["ts", "js"]
   }
 }
