--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Robert Oschwald <robertoschwald@users.noreply.github.com>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/robertoschwald/homebridge-obis-powermeter.git"
+    "url": "git+https://github.com/robertoschwald/homebridge-obis-powermeter.git"
   },
   "bugs": {
     "url": "https://github.com/robertoschwald/homebridge-obis-powermeter/issues"
@@ -51,30 +51,37 @@
     "smartmeter"
   ],
   "devDependencies": {
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.11.25",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
     "eslint": "^8.57.0",
-    "homebridge": "^1.7.0",
+    "homebridge": "^1.8.0",
+    "jest": "^29.7.0",
     "nodemon": "^2.0.22",
     "rimraf": "^5.0.5",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.5",
-    "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
-    "@types/jest": "^29.5.14"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   },
   "dependencies": {
     "axios": "^1.6.7",
     "serialport": "^12.0.0",
-    "ws": "^8.17.1",
-    "smartmeter-obis": "^4.0.0"
+    "smartmeter-obis": "^4.0.0",
+    "ws": "^8.17.1"
   },
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node",
-    "roots": ["<rootDir>/src"],
-    "testMatch": ["**/__tests__/**/*.test.ts"],
-    "moduleFileExtensions": ["ts", "js"]
+    "roots": [
+      "<rootDir>/src"
+    ],
+    "testMatch": [
+      "**/__tests__/**/*.test.ts"
+    ],
+    "moduleFileExtensions": [
+      "ts",
+      "js"
+    ]
   }
 }
