fix Homebridge verification errors

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "Plugin for OBIS smart meter devices (SML/D0) to read power, energy, and voltages.",
   "license": "Apache-2.0",
   "author": "Robert Oschwald <robertoschwald@users.noreply.github.com>",
+  "homepage": "https://github.com/robertoschwald/homebridge-obis-powermeter#readme",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/robertoschwald/homebridge-obis-powermeter.git"
