--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,9 @@ jobs:
       - name: Build the project
         run: npm run build
 
+      - name: Test the project
+        run: npm test
+
       - name: List, audit, fix outdated dependencies and build again
         run: |
           npm list --outdated
