--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "homebridge-obis-powermeter",
   "displayName": "Homebridge OBIS Powermeter",
-  "version": "1.0.3",
+  "version": "1.0.3-dev",
   "description": "Plugin for OBIS smart meter devices (SML/D0) to read power, energy, and voltages.",
   "license": "Apache-2.0",
   "author": "Robert Oschwald <robertoschwald@users.noreply.github.com>",
