--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   ],
   "scripts": {
     "lint": "eslint 'src/**/*.ts'",
+    "obis-reformat": "eslint 'src/**/*.ts' --fix",
     "watch": "npm run build && npm link && nodemon",
     "build": "rimraf ./dist && tsc",
     "package": "npm run build && node -p \"'homebridge-obis-powermeter-' + require('./package.json').version + '.zip'\" | xargs -I {} zip -r {} dist/ package.json README.md LICENSE config.schema.json",
@@ -67,7 +68,7 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
-    "fakegato-history": "^0.6.6",
+    "fakegato-history": "^0.6.7",
     "serialport": "^12.0.0",
     "smartmeter-obis": "^4.0.0",
     "ws": "^8.17.1"
